<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:background="?android:windowBackground"
    tools:context="android.swami.aks.inventorymanager.ScanBarCodeFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_bar_code"
        android:id="@+id/barCodeScabButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/barCodeTextField"
        android:layout_alignEnd="@+id/barCodeTextField"
        android:layout_alignLeft="@+id/barCodeTextField"
        android:layout_alignStart="@+id/barCodeTextField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or"
        android:id="@+id/or"
        android:layout_below="@+id/barCodeTextField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_bar_code"
        android:ems="10"
        android:id="@+id/barCodeTextField"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/barCodeScabButton"
        android:layout_alignStart="@+id/barCodeScabButton"
        android:layout_marginBottom="99dp"
        android:layout_alignRight="@+id/barCodeTextField"
        android:layout_alignEnd="@+id/barCodeTextField" />

</RelativeLayout>
